--- a/styles/css/mobile/header/vtex.store-components.css
+++ b/styles/css/mobile/header/vtex.store-components.css
@@ -1,5 +1,5 @@
 .logoImage--container__logo--mobile {
-  transform: translateY(5px);
+  transform   : translateY(5px);
   /* transform: translateX(100px); */
 }
 
@@ -12,13 +12,20 @@
 }
 
 .searchBarInnerContainer--mobile__header--search :global(.vtex-input-prefix__group) {
-  width: 100% !important;
+  width         : 100% !important;
   /* margin-left: 45px; */
-  border: none;
+  border        : none;
 }
 
 /* .searchBarInnerContainer--mobile__header--search  {
   transform: translateY(-60px);
+} */
+
+/* .autoCompleteOuterContainer--mobile__header--search {
+    width: 90vw;
+    position: absolute;
+    top: 10px;
+    margin-left: 40px;
 } */
 
 .searchBarInnerContainer--mobile__header--search :global(.vtex-styleguide-9-x-input) {
@@ -30,7 +37,8 @@
 }
 
 .searchBarInnerContainer--mobile__header--search :global(.vtex-search-1-x-biggy-autocomplete-wrapper) {
-  width: 100vw;
+  width: 50vw;
+  /* margin: 100px; */
 }
 
 @media screen and (max-width: 1024px) {
@@ -38,9 +46,28 @@
   .logoLink--container__logo--mobile {
     transform: translateX(-80px);
   }
+
   .logoImage--mobile__logo--drawer {
     transform: translateX(120px);
   }
+
+  /* .autoCompleteOuterContainer--mobile__header--search {
+    width: 90vw;
+    position: absolute;
+    top: -55px;
+    margin-left: 50px;
+} */
+
+}
+
+@media screen and (max-width: 1024px) {
+
+  .autoCompleteOuterContainer--mobile__header--search {
+    width: 90vw;
+    position: absolute;
+    top: -55px;
+    margin-left: 50px;
+}
 }
 
 @media screen and (max-width: 900px) {
@@ -55,6 +82,12 @@
   .logoImage--mobile__logo--drawer {
     transform: translateX(80px);
   }
+  .autoCompleteOuterContainer--mobile__header--search {
+    width: 90vw;
+    position: absolute;
+    top: -55px;
+    margin-left: 40px;
+}
 }
 
 
@@ -63,6 +96,16 @@
   .logoLink--container__logo--mobile {
     transform: translateX(-30px);
   }
+}
+
+@media screen and (max-width: 641px) {
+
+  .autoCompleteOuterContainer--mobile__header--search {
+    width: 90vw;
+    position: absolute;
+    top: 10px;
+    margin-left: 40px;
+}
 }
 
 @media screen and (max-width: 600px) {
@@ -85,4 +128,3 @@
     transform: translateX(10px);
   }
 }
-
