--- a/styles/css/mobile/header/vtex.store-drawer.css
+++ b/styles/css/mobile/header/vtex.store-drawer.css
@@ -4,3 +4,7 @@
   max-width: 100% !important;
 }
 
+.closeIconButton--drawer__search,
+.closeIconContainer--drawer__search {
+  background: #eceff1;
+}
