--- a/styles/css/desktop/header/vtex.search.css
+++ b/styles/css/desktop/header/vtex.search.css
@@ -24,7 +24,30 @@
 
 @media screen and (max-width: 1024px) {
   .biggy-autocomplete  {
-    transform: translateX(-150px);
-    width: 400px;
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    transform: translateX(315px);
   }
 }
+
+@media screen and (max-width: 768px) {
+  .biggy-autocomplete  {
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    transform: translateX(190px);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .biggy-autocomplete  {
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    transform: translateX(0px);
+  }
+}
+
+
+
