--- a/styles/css/desktop/header/vtex.store-components.css
+++ b/styles/css/desktop/header/vtex.store-components.css
@@ -3,6 +3,14 @@
   flex: 1;
 }
 
+.searchBarContainer {
+  width: 200px;
+}
+
+.searchBarContainer :global(.vtex-input-prefix__group){
+  width: 210px;
+}
+
 
 .searchBarContainer :global(.vtex-input-prefix__group ){
   width: 200px;
@@ -54,6 +62,15 @@
   transform: translateX(15px);
 }
 
+
+
+@media screen and (max-width: 1099px) {
+
+  .searchBarContainer :global(.vtex-input-prefix__group){
+   width: 90%;
+  }
+
+ }
 
 @media screen and (max-width: 640px) {
 
