--- a/styles/css/desktop/header/vtex.store-header.css
+++ b/styles/css/desktop/header/vtex.store-header.css
@@ -1,1 +1,8 @@
+.headerStickyRow--header__bottom {
+  width: 97.5%;
+  height: 3.2rem;
+}
 
+.headerRowContainer--header__bottom {
+  height: 55px;
+}
