--- a/styles/css/desktop/header/vtex.flex-layout.css
+++ b/styles/css/desktop/header/vtex.flex-layout.css
@@ -154,6 +154,15 @@
   }
 }
 
+/* @media screen and (max-width: 1077px) {
+
+  .flexRowContent--header__section--subheader {
+    margin-right: 60px;
+  }
+
+} */
+
+
 @media screen and (max-width: 640px) {
   .flexRowContent--drawer-header  {
     display: flex;
