--- a/styles/css/desktop/header/vtex.search.css
+++ b/styles/css/desktop/header/vtex.search.css
@@ -24,30 +24,7 @@
 
 @media screen and (max-width: 1024px) {
   .biggy-autocomplete  {
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-    transform: translateX(315px);
+    transform: translateX(-150px);
+    width: 400px;
   }
 }
-
-@media screen and (max-width: 768px) {
-  .biggy-autocomplete  {
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-    transform: translateX(190px);
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .biggy-autocomplete  {
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-    transform: translateX(0px);
-  }
-}
-
-
-
