--- a/styles/css/desktop/plp/vtex.wish-list.css
+++ b/styles/css/desktop/plp/vtex.wish-list.css
@@ -1,1 +1,9 @@
+.wishlistIcon--plp__product--favorites {
+  background: url("assets/img/header/userWishlist.svg") ;
+  background-repeat: no-repeat !important;
+}
 
+.wishlistIcon--plp__list--favorites {
+  background: url("assets/img/header/userWishlist.svg") ;
+  background-repeat: no-repeat !important;
+}
