--- a/styles/css/desktop/pdp/vtex.rich-text.css
+++ b/styles/css/desktop/pdp/vtex.rich-text.css
@@ -1,27 +1,40 @@
 .paragraph--pdp__section--category {
   font-family: "AdihausDIN-Regular";
-  font-size: 16px;
-  color: #000;
+  font-size  : 16px;
+  color      : #000;
 }
 
 .paragraph--pdp__modal--activator {
-  color: #000;
-  font-family: "AdihausDIN-Regular";
-  font-size: 16px;
-  color: #000;
-  cursor: pointer;
+  font-family    : "AdihausDIN-Regular";
+  font-size      : 16px;
+  color          : #000;
+  cursor         : pointer;
   text-decoration: underline;
 }
 
 .paragraph--pdp__modal--activator:hover {
   background-color: #000;
-  color: #fff;
+  color           : #fff;
+}
+
+.paragraph--pdp__modal--content1 {
+  font-size     : 30px;
+  font-weight   : 700;
+  color         : #000;
+  font-family   : "adineuePRO-Bold";
+  letter-spacing: 1.5px;
+}
+
+.paragraph--pdp__modal--content2 {
+  font-family    : "AdihausDIN-Regular";
+  font-size      : 16px;
+  color          : #000;
 }
 
 .paragraph--pdp__sku--size {
   font-family: "AdihausDIN-Regular";
-  font-size: 16px;
-  color: #000;
+  font-size  : 16px;
+  color      : #000;
   font-weight: 700;
 }
 
@@ -30,27 +43,35 @@
 }
 
 .paragraph--pdp__sku--link {
-  transform: translateY(-6px);
+  transform      : translateY(-6px);
   text-decoration: underline;
-  font-family: "AdihausDIN-Regular";
-  font-size: 16px;
-  color: #000;
-  margin-left: 3px;
+  font-family    : "AdihausDIN-Regular";
+  font-size      : 16px;
+  color          : #000;
+  margin-left    : 3px;
 }
 
 .paragraph--pdp__product--shipment-text,
 .paragraph--pdp__product--benefits-text {
   font-family: "AdihausDIN-Regular";
-  font-size: 16px;
-  color: #000;
+  font-size  : 16px;
+  color      : #000;
 }
 
 .paragraph--pdp__product--benefits-text {
   text-decoration: underline;
-  cursor: pointer;
+  cursor         : pointer;
 }
 
-.paragraph--pdp__product--benefits-text:hover{
+.paragraph--pdp__product--benefits-text:hover {
   background-color: #000;
-  color: #fff;
+  color           : #fff;
+}
+
+.paragraph--pdp__slider--title-one {
+  font-size     : 30px;
+  font-weight   : 700;
+  color         : #000;
+  font-family   : "adineuePRO-Bold";
+  letter-spacing: 1.5px;
 }
