--- a/styles/css/desktop/plp/vtex.search-result.css
+++ b/styles/css/desktop/plp/vtex.search-result.css
@@ -2,6 +2,15 @@
   padding-bottom: 40px;
 }
 
+.galleryTitle--layout {
+  font-size: 40px;
+  color: #000;
+  font-family: "AdihusDIN-Light";
+  letter-spacing: 2px;
+}
+
+
+
 .filtersWrapper--desktop__filter--navigator {
   width       : 390px !important;
   /* height      : 100vh; */
@@ -105,4 +114,27 @@
     width: 100%;
     bottom: -4px;
     left: 5px;
+}
+
+
+@media screen and (max-width: 1024px) {
+  .filtersWrapperMobile--mobile__filter--navigator{
+    transform: translateY(10px);
+  }
+
+  .galleryTitle--layout {
+    font-size: 30px;
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  .filtersWrapperMobile--mobile__filter--navigator{
+    transform: translateY(5px);
+  }
+
+  .galleryTitle--layout {
+    font-size: 24px;
+  }
+
 }
