--- a/styles/css/global/pdp/vtex.store-components.css
+++ b/styles/css/global/pdp/vtex.store-components.css
@@ -2,6 +2,17 @@
   margin-top: 5px;
 }
 
+.productImagesContainer--pdp__grid--images--list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 80px;
+}
+
+.productImageTag {
+  width: 380px !important;
+}
+
 .productBrand--pdp__product--name {
   font-size: 30px;
   letter-spacing: 1.5px;
@@ -11,7 +22,7 @@
 }
 
 .price_sellingPriceContainer--pdp__product--price {
-  margin: 15px 0 20px 0;
+  margin: 10px 0 20px 0;
 }
 
 .price_sellingPrice--pdp__product--price,
@@ -63,4 +74,22 @@
 
 .imageElement--pdp__product--returns-image {
   transform: translateY(15px);
+}
+
+@media screen and (max-width: 1024px) {
+  .productBrand--pdp__product--name {
+    font-size: 24px;
+    letter-spacing: 2px;
+  }
+
+  .imageElement--pdp__product--returns-image {
+    transform: translateY(1px);
+  }
+
+}
+
+@media screen and (max-width: 617px) {
+  .imageElement--pdp__product--returns-image {
+    transform: translateY(15px);
+  }
 }
