--- a/styles/css/global/pdp/vtex.modal-layout.css
+++ b/styles/css/global/pdp/vtex.modal-layout.css
@@ -19,6 +19,12 @@
   color: #000;
 }
 
+.closeButtonLabel--pdp__modal--close {
+  font-size: 23px;
+  color: #000;
+  padding: 0 15px 0 15px !important;
+}
+
 /* @media screen and (max-width: 1024px) {
   .closeButton--pdp__modal--close {
     display: none;
