--- a/styles/css/global/pdp/vtex.rich-text.css
+++ b/styles/css/global/pdp/vtex.rich-text.css
@@ -26,9 +26,9 @@
 }
 
 .paragraph--pdp__modal--content2 {
-  font-family    : "AdihausDIN-Regular";
-  font-size      : 16px;
-  color          : #000;
+  font-family: "AdihausDIN-Regular";
+  font-size  : 16px;
+  color      : #000;
 }
 
 .paragraph--pdp__sku--size {
@@ -69,9 +69,9 @@
 }
 
 .paragraph--pdp__title--description {
-  font-family    : "AdihausDIN-Regular";
-  font-size      : 16px;
-  color          : #000;
+  font-family: "AdihausDIN-Regular";
+  font-size  : 16px;
+  color      : #000;
   font-weight: 700;
 }
 
@@ -83,3 +83,8 @@
   letter-spacing: 1.5px;
 }
 
+@media screen and (max-width: 375px) {
+  .paragraph--pdp__slider--title-one {
+    font-size     : 24px;
+  }
+}
