--- a/styles/css/global/pdp/vtex.store-components.css
+++ b/styles/css/global/pdp/vtex.store-components.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 80px;
 }
 
 .productImageTag {
@@ -76,6 +75,24 @@
   transform: translateY(15px);
 }
 
+@media screen and (max-width: 2500px) {
+  .productImageTag {
+    width: 500px !important;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .productImageTag {
+    width: 380px !important;
+  }
+}
+
+@media screen and (max-width: 1118px) {
+  .productImageTag {
+    width: 350px !important;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .productBrand--pdp__product--name {
     font-size: 24px;
@@ -84,6 +101,10 @@
 
   .imageElement--pdp__product--returns-image {
     transform: translateY(1px);
+  }
+
+  .productImageTag {
+    width: 500px !important;
   }
 
 }
