--- a/styles/css/mobile/plp/vtex.flex-layout.css
+++ b/styles/css/mobile/plp/vtex.flex-layout.css
@@ -1,4 +1,4 @@
-.flexRowContent--mobile__pdp-section1 :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+.flexRowContent--pdp__breadrating--container :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
   width: auto !important;
 }
 
@@ -7,6 +7,10 @@
   transform: translateY(7px);
 }
 
-.flexRowContent--mobile__pdp-section1 {
+.flexRowContent--pdp__breadrating--container {
+  display: flex;
+}
+
+.flexRowContent--mobile__headerplp--container {
   display: flex;
 }
