--- a/styles/css/global/pdp/vtex.store-components.css
+++ b/styles/css/global/pdp/vtex.store-components.css
@@ -71,9 +71,36 @@
   padding: 30px;
 }
 
+/* .skuSelectorItem--selected{
+  background: #000;
+  color: #fff;
+} */
+
 .imageElement--pdp__product--returns-image {
   transform: translateY(15px);
 }
+
+.productDescriptionText,
+.specificationsTableRow  {
+  font-family: "AdihausDIN-Regular";
+  font-size  : 16px;
+  color      : #000;
+}
+
+.productDescriptionTitle {
+  font-size     : 30px;
+  font-weight   : 700;
+  color         : #000;
+  font-family   : "adineuePRO-Bold";
+  letter-spacing: 1.5px;
+}
+
+.specificationsTitle,
+.specificationsTableHead  {
+  display: none;
+}
+
+
 
 @media screen and (max-width: 2500px) {
   .productImageTag {
@@ -106,6 +133,11 @@
   .productImageTag {
     width: 500px !important;
   }
+
+  .productDescriptionTitle {
+    font-size     : 24px;
+  }
+
 
 }
 
