--- a/styles/css/desktop/footer/vtex.store-link.css
+++ b/styles/css/desktop/footer/vtex.store-link.css
@@ -3,42 +3,54 @@
 }
 
 .label--footer__newsletter--button {
-  font-size: 14px;
-  letter-spacing: 2px;
-  font-weight: 700;
-  font-family: "AdihusDIN-Bold";
-  position: relative;
-  border-radius: 0;
-  height: max-content;
+  font-size       : 14px;
+  letter-spacing  : 2px;
+  font-weight     : 700;
+  font-family     : "AdihusDIN-Bold";
+  position        : relative;
+  border-radius   : 0;
+  height          : max-content;
   background-color: #000;
-  border: none;
-  align-self: center;
-  padding: 20px;
-  /* width: 35%; */
+  border          : none;
+  align-self      : center;
+  padding         : 20px;
+  /* width        : 35%; */
 }
 
 .label--footer__newsletter--button::after {
-  content: "";
-  display: block;
-  position: absolute;
+  content     : "";
+  display     : block;
+  position    : absolute;
   border-right: 1px solid #000;
-  border-top: 1px solid #000;
-  height: 100%;
-  right: -5px;
-  top: 4px;
-  width: 3px;
+  border-top  : 1px solid #000;
+  height      : 100%;
+  right       : -5px;
+  top         : 4px;
+  width       : 3px;
 }
 
 .label--footer__newsletter--button::before {
-  content: "";
-    display: block;
-    position: absolute;
-    border-left: 1px solid #000;
-    border-bottom: 1px solid #000;
-    height: 3px;
-    width: 100%;
-    bottom: -5px;
-    left: 5px;
+  content      : "";
+  display      : block;
+  position     : absolute;
+  border-left  : 1px solid #000;
+  border-bottom: 1px solid #000;
+  height       : 3px;
+  width        : 100%;
+  bottom       : -5px;
+  left         : 5px;
+}
+
+.link--footer__text--item {
+  text-decoration: none !important;
+}
+
+.label--footer__text--item {
+  font-size  : 14px;
+  font-weight: 400;
+  color      : #000;
+  font-family: "AdihausDIN-Regular";
+  cursor     : pointer;
 }
 
 /* .label--footer__newsletter--button::after {
@@ -46,5 +58,3 @@
   display: block;
   position: absolute;
 } */
-
-
