--- a/styles/css/global/minicart/vtex.flex-layout.css
+++ b/styles/css/global/minicart/vtex.flex-layout.css
@@ -1,32 +1,102 @@
+.flexRow--cart__custom--main {
+  width        : 80%;
+  margin       : 0 auto;
+  margin-top   : 40px;
+  margin-bottom: 80px;
+}
 
+.flexRowContent--cart__custom--main {
+  justify-content: space-around;
+}
 
+.flexRowContent--cart__custom--main :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+  width: auto !important;
+}
+
+.flexRowContent--product__description--main :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
+  width: 50% !important;
+}
+
+.flexColChild--cart__custom--left {
+  height: max-content !important;
+}
+
+.flexRowContent--cart__custom--payment {
+  width      : 365px;
+  height     : 65px;
+  margin-left: 25px;
+  margin-top : 40px;
+}
+
+.flexRowContent--cart__custom--warning {
+  width: 85%;
+}
+
+.flexCol--cart__custom--left {
+  margin-top: 120px;
+}
 
 .flexCol--remove__button--minicart {
   justify-content: flex-start;
 }
 
 .flexCol--image__container {
-  background:  #EBEEF0;
+  background      : #EBEEF0;
   /* padding-right: 50px; */
 }
 
 .flexRowContent--productlist__container :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
-  padding: 0 ;
-}
-.flexRowContent--productlist__container {
-  border: 1px solid;
   padding: 0;
-  height: 150px;
-  width: 350px;
+}
+
+.flexRowContent--productlist__container {
+  border   : 1px solid;
+  padding  : 0;
+  height   : 200px;
+  width    : 100%;
+  max-width: 600px;
+  min-width: 500px;
 }
 
 .flexColChild--image__container {
-  width: 150px;
+  width: 200px;
 }
 
 .flexCol--priceWrapper__minicart {
   margin-left: 0;
 }
+
+.flexRowContent--minicart__footer :global(.vtex-button__label) {
+  font-size  : 14px;
+  font-weight: 700;
+  color      : #fff;
+  font-family: "AdihusDIN-Bold";
+}
+
+.flexRowContent--minicart__footer :global(.vtex-button)::after {
+  content     : "";
+  display     : block;
+  position    : absolute;
+  border-right: 1px solid #000;
+  border-top  : 1px solid #000;
+  height      : 100%;
+  right       : -5px;
+  top         : 4px;
+  width       : 3px;
+}
+
+.flexRowContent--minicart__footer :global(.vtex-button)::before {
+  content      : "";
+  display      : block;
+  position     : absolute;
+  border-left  : 1px solid #000;
+  border-bottom: 1px solid #000;
+  height       : 3px;
+  width        : 100%;
+  bottom       : -5px;
+  left         : 5px;
+}
+
 
 .flexRowContent--minicart__footer {
   flex-direction: column;
@@ -34,29 +104,34 @@
 
 
 .flexRowContent--minicart__footer :global(.vtex-flex-layout-0-x-stretchChildrenWidth) {
-  width: 100% !important;
-  color: #000;
+  width      : 100% !important;
+  color      : #000;
   font-family: "AdihausDIN-Regular";
 }
 
 .flexRowContent--minicart__footer :global(.vtex-button) {
-  background: #000;
-  border: none;
+  background   : #000;
+  border       : none;
   border-radius: 0;
-  font-family: "AdihausDIN-Regular";
+  font-family  : "AdihausDIN-Regular";
 }
 
 .flexColChild--product__description {
-  width: 130px;
+  width: 100%;
 }
 
 .flexColChild--remove__button--minicart {
-  transform: translateX(20px);
+  transform      : translateX(20px);
+  width          : 100%;
+  display        : flex;
+  justify-content: space-around;
 }
 
 .flexRow--productlist__container {
-  margin-bottom: 20px;
-  float: right;
+  margin-bottom     : 20px;
+  margin-top        : 40px;
+  display           : flex;
+  /* justify-content: center; */
 }
 
 .flexColChild--main-container__container {
@@ -69,12 +144,22 @@
 
 
 
-.flexColChild--remove__button--minicart {
-  width: 20px;
-}
 
 .flexRowContent--price__remove--container {
   justify-content: flex-start;
+  margin-top     : 30px;
+}
+
+@media screen and (max-width: 1024px) {
+  .flexRowContent--cart__custom--main {
+    display       : flex;
+    flex-direction: column;
+  }
+
+  .flexCol--cart__custom--left {
+    margin-top: 20px;
+  }
+
 }
 
 @media screen and (max-width: 640px) {
@@ -93,10 +178,35 @@
     display: flex;
   }
 
- }
+}
 
- /* @media screen and (max-width: 480px) {
-  .flexRow--productlist__container {
-    float: right;
+@media screen and (max-width: 670px) {
+  .flexRowContent--productlist__container {
+    width    : 100% !important;
+    max-width: 500px !important;
+    min-width: 200px !important;
+    height: 250px !important;
   }
- } */
+  .flexColChild--remove__button--minicart {
+    justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width: 470px) {
+  .flexRowContent--cart__custom--payment {
+    margin: 0 auto;
+    width: 100%;
+  }
+  .flexRow--cart__custom--payment {
+    margin-top: 40px;
+    margin-left: 15px;
+  }
+  .flexCol--cart__custom--bottom  {
+    width: 200px;
+  }
+
+  .flexColChild--image__container {
+    width: 100px;
+  }
+
+}
