--- a/styles/css/global/home/vtex.slider-layout.css
+++ b/styles/css/global/home/vtex.slider-layout.css
@@ -1,29 +1,30 @@
 .sliderTrack--carousel_home {
-  margin:50px 0 50px 0 ;
+  margin: 50px 0 50px 0;
 }
 
 .slideChildrenContainer--carousel_home {
   /* height: 400px; */
-  width: 300px;
+  width              : 300px;
   /* background-color: #EBEEF0; */
 }
+
 .slideChildrenContainer--carousel_home:hover {
   border: solid 1px;
 }
 
 .slideChildrenContainer--carousel_home :global(.vtex-button) {
-  background: #fff;
-  color: #000;
-  font-weight: 700;
+  background    : #fff;
+  color         : #000;
+  font-weight   : 700;
   letter-spacing: 2px;
-  font-family: "AdihausDIN-Regular";
-  height: 50px;
-  border: none;
-  border-radius: 0;
+  font-family   : "AdihausDIN-Regular";
+  height        : 50px;
+  border        : none;
+  border-radius : 0;
 }
 
 .slideChildrenContainer--carousel_home :global(.vtex-add-to-cart-button-0-x-buttonText) {
-  font-size: 14px;
+  font-size  : 14px;
   font-family: "AdihausDIN-Regular";
 }
 
@@ -32,26 +33,27 @@
 }
 
 .sliderTrack--carousel_home {
-  gap: 20px;
+  gap     : 20px;
   /* width: 350% !important; */
 }
 
 .sliderLayoutContainer--home__tendencies--slider {
-  width: 80%;
+  width : 80%;
   margin: 0 auto;
 }
 
 .caretIcon--home__tendencies--slider {
   background: #fff;
-  padding: 10px;
-  border: solid 1px;
+  padding   : 10px;
+  border    : solid 1px;
 }
 
 .caretIcon--carousel_home {
   background: #fff;
-  color: #000;
-  padding: 10px;
+  color     : #000;
+  padding   : 10px;
 }
+
 /* .caretIcon--carousel_home:hover {
   background: #000;
   color: #fff;
@@ -60,63 +62,86 @@
 } */
 
 .sliderTrack--home__slider--tabs {
-  width: 95% !important;
-  margin: 0 auto;
-  justify-content:flex-start;
+  width          : 95% !important;
+  margin         : 0 auto;
+  justify-content: flex-start;
 }
 
 .slide--home__slider--tabs {
-  width: 25% !important;
+  width      : 25% !important;
   white-space: nowrap;
 }
 
+.sliderLayoutContainer--bullet-group {
+  margin-bottom: 30px;
+  height: 500px;
+}
+
+.bullet__item--title--bullet-group {
+  text-decoration: none;
+  color          : #000;
+}
+
+.sliderRightArrow--bullet-group {
+  position       : absolute;
+  top            : 0;
+  left           : 100px;
+  justify-content: right;
+}
+
+.sliderLeftArrow--bullet-group {
+  position       : absolute;
+  top            : 0;
+  right          : 40px;
+  justify-content: right;
+}
 
 
 @media screen and (max-width: 1440px) {
 
   .slide--home__slider--tabs {
-    width: 30% !important;
+    width      : 30% !important;
     white-space: nowrap;
   }
 
- }
+}
 
- @media screen and (max-width: 1280px) {
+@media screen and (max-width: 1280px) {
 
   .sliderTrack--home__slider--tabs {
-    width: 91% !important;
+    width : 91% !important;
     margin: 0 auto;
   }
 
   .slide--home__slider--tabs {
-    width: 22% !important;
+    width      : 22% !important;
     white-space: nowrap;
   }
- }
+}
 
- @media screen and (max-width: 1220px) {
+@media screen and (max-width: 1220px) {
 
   .slide--home__slider--tabs {
-    width: 24% !important;
+    width      : 24% !important;
     white-space: nowrap;
   }
 
- }
+}
 
- @media screen and (max-width: 1120px) {
+@media screen and (max-width: 1120px) {
 
   .slide--home__slider--tabs {
-    width: 25% !important;
+    width      : 25% !important;
     white-space: nowrap;
   }
 
- }
+}
 
 
 @media screen and (max-width: 1024px) {
 
   .sliderLayoutContainer--home__tendencies--slider {
-    width: 98%;
+    width    : 98%;
     /* margin: 0 auto; */
   }
 
@@ -126,20 +151,20 @@
   }
 
   .slide--home__slider--tabs {
-    width: 26% !important;
+    width      : 26% !important;
     white-space: nowrap;
   }
- }
+}
 
 
- @media screen and (max-width: 1000px) {
+@media screen and (max-width: 1000px) {
 
   .slide--home__slider--tabs {
     width: 40% !important;
   }
- }
+}
 
- @media screen and (max-width: 700px) {
+@media screen and (max-width: 700px) {
 
   /* .sliderTrack--home__slider--tabs {
     padding-left: 50px;
@@ -149,18 +174,18 @@
     width: 50% !important;
   }
 
- }
+}
 
- @media screen and (max-width: 570px) {
+@media screen and (max-width: 570px) {
 
 
   .slide--home__slider--tabs {
     width: 70% !important;
   }
 
- }
+}
 
- @media screen and (max-width: 430px) {
+@media screen and (max-width: 430px) {
 
   /* .sliderTrack--home__slider--tabs {
     padding-left: 50px;
@@ -170,9 +195,9 @@
     width: 80% !important;
   }
 
- }
+}
 
- @media screen and (max-width: 370px) {
+@media screen and (max-width: 370px) {
 
   /* .sliderTrack--home__slider--tabs {
     padding-left: 50px;
@@ -182,10 +207,4 @@
     width: 90% !important;
   }
 
- }
-
-
-
-
-
-
+}
