--- a/styles/css/global/pdp/vtex.slider-layout.css
+++ b/styles/css/global/pdp/vtex.slider-layout.css
@@ -42,9 +42,26 @@
   background: #eceff1;
 } */
 
-/* .sliderTrackContainer--carousel_pdp {
-  overflow-x: scroll;
-} */
+.sliderTrackContainer--carousel_pdp {
+  display      : flex;
+  overflow     : auto;
+}
+.sliderTrackContainer--carousel_pdp::-webkit-scrollbar-track,
+.sliderTrackContainer--carousel_pdp::-webkit-scrollbar-thumb {
+  background-clip : padding-box;
+  background-color: #eceff1;
+  border-right    : 16px solid transparent;
+  border-left     : 16px solid transparent;
+}
+
+.sliderTrackContainer--carousel_pdp::-webkit-scrollbar-thumb {
+  background-color: #000;
+}
+
+.sliderTrackContainer--carousel_pdp::-webkit-scrollbar {
+  height: 4px;
+}
+
 
 /* .sliderTrackContainer--carousel_pdp::-webkit-scrollbar-thumb {
   background-attachment: red;
